[package]
name = "rbcachefs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "staticlib" ] 

[build-dependencies]
cbindgen = "0.20.0"
pkg-config = "0.3"
bindgen = { version = "0.59.1", default-features = false }

[dependencies]
anyhow = "1.0.44"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

clap = { version = "2.33", features = [ "wrap_help" ] }
libc = "0.2.69"
uuid = "0.8"
udev = "0.4"
gag = "1.0.0"
getset = "0.1"
itertools = "0.9"
structopt = "0.3.23"
parse-display = "0.1"
errno = "0.2"
either = "1.5"
rpassword = "4"
byteorder = "1.3"

bitfield = "0.13"
memoffset = "0.5"
